# bvhar

./: .Rbuildignore  .gitignore  .travis.yml  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  codecov.yml  cran-comments.md  environment.yml
.github/: CONTRIBUTING.md  SUPPORT.md
R/: RcppExports.R  bvar-flat.R  bvar-ghosh.R  bvar-hierarchical.R  bvar-horseshoe.R  bvar-minnesota.R  bvar-ssvs.R  bvar-sv.R  bvar-tvp.R  bvhar-hierarchical.R  bvhar-horseshoe.R  bvhar-minnesota.R  bvhar-package.R  bvhar-ssvs.R  bvhar-sv.R  bvhar-tvp.R  criteria.R  data.R  doc-models.R  forecast.R  generate-process.R  globals.R  hyperparam-sparse.R  hyperparam.R  hyperprior.R  irf.R  member.R  minnesota.h  misc-r.R  parameters.R  plot-spillover.R  plot.R  print-bvarflat.R  print-bvarghosh.R  print-bvarmn.R  print-bvharmn.R  print-bvharsp.R  print-bvharspec.R  print-forecast.R  print-hmn.R  (+22 more)
data/: est_energy.rda  est_energy_raw.rda  est_energy_rt.rda  etf_vix.rda  etf_vix_raw.rda  oxfordman_rk.rda  oxfordman_rv.rda  oxfordman_wide_rk.rda  oxfordman_wide_rv.rda  trading_day.rda
data-raw/: est_energy.R  etf-vix.R  etf_vix.R  oxfordman.R  oxfordman_long.R
inst/: CITATION
logo/: bvhar-hex.R
man/: AIC.varlse.Rd  BIC.varlse.Rd  FPE.Rd  FPE.varlse.Rd  HQ.Rd  HQ.varlse.Rd  VARtoVMA.Rd  VHARtoVMA.Rd  alpl.Rd  analyze_ir.Rd  autolayer.Rd  autoplot.Rd  autoplot.bvarmn.Rd  autoplot.bvhardynsp.Rd  autoplot.bvharirf.Rd  autoplot.bvharmod.Rd  autoplot.bvharsp.Rd  autoplot.minnesota.Rd  autoplot.normaliw.Rd  autoplot.predbvhar.Rd  autoplot.summary.bvarmn.Rd  autoplot.summary.bvharmod.Rd  autoplot.summary.bvharsp.Rd  autoplot.summary.hsmod.Rd  autoplot.summary.mvhsmod.Rd  autoplot.summary.normaliw.Rd  bound_bvhar.Rd  build_design.Rd  build_xdummy.Rd  build_y0.Rd  build_ydummy.Rd  build_ydummy_bvhar.Rd  bvar_adding_dummy.Rd  bvar_flat.Rd  bvar_ghosh.Rd  bvar_horseshoe.Rd  bvar_minnesota.Rd  bvar_mixture.Rd  bvar_niwhm.Rd  bvar_predictive_density.Rd  (+186 more)
python/: .gitignore  LICENSE  MANIFEST.in  README.md  README.qmd  environment.yml  pyproject.toml  setup.py
python/bvhar/: minimal.cpp  minimal2.cpp
python/bvhar/_src/: _design.cpp  _ldlt.cpp  _ldltforecast.cpp  _ols.cpp  _sv.cpp  _svforecast.cpp
python/bvhar/datasets/: __init__.py
python/bvhar/datasets/data/: etf_vix.csv  etf_vix.pkl
python/bvhar/minimalpkg/: subminimal.cpp
python/bvhar/model/: __init__.py  _bayes.py  _design.cpp  _ols.cpp  _ols.py  _spec.py  design.cpp  ols.cpp
python/bvhar/random/: normal.cpp
python/bvhar/tests/: test_bayes.py
python/bvhar/utils/: _misc.py  checkomp.cpp
python/docs/: .gitignore  _quarto.yml  _variables.yml  authors.qmd  get_started.qmd  index.qmd  intro.qmd  mypkgdown.css  mypkgdown.scss  requirements.txt  temp-example.qmd
python/requirements/: environment-dev.yml  environment.yml  requirements-dev.txt  requirements.txt
python/src/bvhar/: __init__.py
python/src/bvhar/_src/: _bayes.cpp  _cta.cpp  _design.cpp  _forecast.cpp  _ldlt.cpp  _ldltforecast.cpp  _ldltspillover.cpp  _ols.cpp  _spillover.cpp  _sv.cpp  _svforecast.cpp  _svspillover.cpp
python/src/bvhar/datasets/: __init__.py
python/src/bvhar/model/: __init__.py  _bayes.py  _ols.py  _spec.py
python/src/bvhar/random/: normal.cpp
python/src/bvhar/utils/: _misc.py  _utils.cpp  checkomp.cpp
python/tests/: test_bayes.py  test_misc.py  test_normal.py  test_ols.py
revdep/: README.md
src/: Makevars  Makevars.ucrt  Makevars.win  RcppExports.cpp  bvhardesign.cpp  bvhardesign.h  bvhardraw.cpp  bvhardraw.h  bvharinterrupt.cpp  bvharinterrupt.h  bvharmisc.h  bvharomp.cpp  bvharomp.h  bvharprogress.cpp  bvharprogress.h  bvharsim.cpp  bvharssvs.h  bvharstructural.cpp  design.cpp  empirical-bayes.cpp  estimate-bayes.cpp  estimate-bvar.cpp  estimate-hierarchical.cpp  estimate-horseshoe.cpp  estimate-mcmc.cpp  estimate-ols.cpp  estimate-ssvs.cpp  estimate-sur.cpp  estimate-sv.cpp  estimate-tvp.cpp  estimate-var.cpp  estimate-vhar.cpp  expand.cpp  fitvar.h  forecast-bayes.cpp  forecast-bvar.cpp  forecast-bvhar.cpp  forecast-expand.cpp  forecast-ldlt.cpp  forecast-mcmc.cpp  (+38 more)
tests/: testthat.R  tinytest.R
(+152 files in other folders)
