[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "bvhar"
version = "0.0.0.9000"
description = "Bayesian multivariate time series modeling"
readme = "README.md"
authors = [
    { name = "Young Geun Kim", email = "ygeunkimstat@gmail.com" }
]
keywords = ["bayesian", "time series"]
dependencies = [
    "pybind11",
    "numpy",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bvhar", "bvhar.*"]

[tool.setuptools.package-data]
bvhar = ["**/*.cpp"]
